--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # oTree-may-overwrite-this-file
 # IF YOU MODIFY THIS FILE, remove these comments. 
 # otherwise, oTree will automatically overwrite it.
-otree>=5.4.0
+otree==5.11
 psycopg2>=2.8.4
 sentry-sdk==0.7.9
 python-dotenv==1.0.1
